Deprecated configuration parameter '--with-xmp-dir' was excluded

--- a/install
+++ b/install
@@ -46,7 +46,7 @@ cd $PHP_DIR || exit 5
             --with-jpeg-dir \
             --with-png-dir \
             --with-vpx-dir \
-            --with-xmp-dir \
+#            --with-xmp-dir \
             --with-layout=GNU \
             --with-regex=php \
             --with-zend-vm=CALL \
