--- a/install
+++ b/install
@@ -17,7 +17,8 @@ fi
 
 cd $PHP_DIR || exit 5
 
-CONFIGURE_OPTIONS="--prefix=$PREFIX --exec-prefix=$EPREFIX --with-config-file-scan-dir=$EXTENSION_INI_DIR --disable-all --with-layout=GNU --with-zend-vm=CALL --with-pear"
+# --enable-xml required by pear
+CONFIGURE_OPTIONS="--prefix=$PREFIX --exec-prefix=$EPREFIX --with-config-file-scan-dir=$EXTENSION_INI_DIR --disable-all --with-layout=GNU --with-zend-vm=CALL --with-pear --enable-xml"
 
 for cli_option in $@;
 do
