Added ability to enable opcache

--- a/install
+++ b/install
@@ -63,6 +63,7 @@ do
     freetype) CONFIGURE_OPTIONS="$CONFIGURE_OPTIONS --with-freetype-dir" ;;
     jpeg) CONFIGURE_OPTIONS="$CONFIGURE_OPTIONS --with-jpeg-dir" ;;
     readline) CONFIGURE_OPTIONS="$CONFIGURE_OPTIONS --with-readline" ;;
+    opcache) CONFIGURE_OPTIONS="$CONFIGURE_OPTIONS --enable-opcache" ;;
   esac
 done;
 
